@@ -15,7 +15,8 @@ version 0.9.4
 - New functions to check (non)existens of a given set of key combinations:
   'contains_exactly', 'contains_at_least', 'contains_at_most', 'does_not_contain'.
   Support for globbing and regular expression is built in.
-
+- Breaking change: for consistency, the '...' argument in 'exists_one' and 'exists_any'
+  is replaced with 'by'. This only affects cases with multiple grouping variables.
 
 
 version 0.9.3
